Python, Go releases

--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -1,3 +1,13 @@
-<h2>Download CA Bundle</h2>
+<p>&nbsp;</p>
 
-<li><a href="http://certifi-bundles.s3.amazonaws.com/latest.pem">latest.pem</a></li>
+<p><a href="https://certifi-bundles.s3.amazonaws.com/latest.pem">Download Latest CA Bundle PEM</a>.</p>
+
+<p>&nbsp;</p>
+
+<p><strong>Packaged Editions:</strong></p>
+<ul>
+    <li><a href="https://pypi.python.org/pypi/certifi/">Python</a></li>
+    <li><a href="https://github.com/certifi/gocertifi">Go</a></li>
+</ul>
+
+<p>&nbsp;</p>
