much updated sidebar

--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -6,8 +6,17 @@
 
 <p><strong>Packaged Editions:</strong></p>
 <ul>
-    <li><a href="https://pypi.python.org/pypi/certifi/">Python</a></li>
+    <li><a href="https://github.com/certifi/python-certifi">Python</a> (<a href="https://pypi.python.org/pypi/certifi/">PyPi</a>)</li>
     <li><a href="https://github.com/certifi/gocertifi">Go</a></li>
+</ul>
+
+<p>&nbsp;</p>
+
+
+<p><strong>Automatic Updates:</strong></p>
+<ul>
+    <li><a href="https://tinyletter.com/certifi">Email Notifications</a></li>
+    <li><a href="https://certifi-bundles.s3.amazonaws.com/feed.xml">Atom Feed</a></li>
 </ul>
 
 <p>&nbsp;</p>
