--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -16,7 +16,7 @@
 <p><strong>Automatic Updates:</strong></p>
 <ul>
     <li><a href="https://tinyletter.com/certifi">Email Notifications</a></li>
-    <li><a href="https://certifi-bundles.s3.amazonaws.com/feed.xml">Atom Feed</a></li>
+    <li><a href="https://certifi-bundles.s3.amazonaws.com/feed.atom">Atom Feed</a></li>
 </ul>
 
 <p>&nbsp;</p>
