--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -7,6 +7,7 @@
 <p><strong>Packaged Editions:</strong></p>
 <ul>
     <li><a href="https://github.com/certifi/python-certifi">Python</a> (<a href="https://pypi.python.org/pypi/certifi/">PyPi</a>)</li>
+    <li><a href="https://github.com/certifi/ruby-certifi">Ruby</a></li>
     <li><a href="https://github.com/certifi/gocertifi">Go</a></li>
 </ul>
 
