--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -7,7 +7,7 @@
 <p><strong>Packaged Editions:</strong></p>
 <ul>
     <li><a href="https://github.com/certifi/python-certifi">Python</a> (<a href="https://pypi.python.org/pypi/certifi/">PyPi</a>)</li>
-    <li><a href="https://github.com/certifi/ruby-certifi">Ruby (<a href="https://rubygems.org/gems/certifi">RubyGems</a>)</a></li>
+    <li><a href="https://github.com/certifi/ruby-certifi">Ruby</a> (<a href="https://rubygems.org/gems/certifi">RubyGems</a>)</li>
     <li><a href="https://github.com/certifi/gocertifi">Go</a></li>
 </ul>
 
