--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -8,6 +8,7 @@
 <ul>
     <li><a href="https://github.com/certifi/python-certifi">Python</a> (<a href="https://pypi.python.org/pypi/certifi/">PyPi</a>)</li>
     <li><a href="https://github.com/certifi/ruby-certifi">Ruby</a> (<a href="https://rubygems.org/gems/certifi">RubyGems</a>)</li>
+    <li><a href="https://github.com/certifi/node-certifi">Node</a> (<a href="https://www.npmjs.org/package/certifi">npm</a>)</li>
     <li><a href="https://github.com/certifi/gocertifi">Go</a></li>
 </ul>
 
