Update sidebar link to mkcert.org as well

--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -1,6 +1,6 @@
 <p>&nbsp;</p>
 
-<p><a href="https://certifi-bundles.s3.amazonaws.com/latest.pem">Download Latest CA Bundle PEM</a>.</p>
+<p><a href="https://mkcert.org/generate/">Download Latest CA Bundle PEM</a>.</p>
 
 <p>&nbsp;</p>
 
