--- a/source/_templates/latest.html
+++ b/source/_templates/latest.html
@@ -10,6 +10,7 @@
     <li><a href="https://github.com/certifi/ruby-certifi">Ruby</a> (<a href="https://rubygems.org/gems/certifi">RubyGems</a>)</li>
     <li><a href="https://github.com/certifi/node-certifi">Node</a> (<a href="https://www.npmjs.org/package/certifi">npm</a>)</li>
     <li><a href="https://github.com/certifi/gocertifi">Go</a></li>
+    <li><a href="https://github.com/certifi/erlang-certifi">Erlang</a></li>
 </ul>
 
 <p>&nbsp;</p>
